--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <button onclick="checkHost()">Check</button>  <label  id = host_reply></label>
 <br>
 <!--<img alt="motor_notation" class="center" src="images/motor_notation.png"> -->
-<img alt="motor_notation" class="center" src="/images/motor_notation.png">
+<img alt="motor_notation" class="center" src="images/motor_notation.png">
 
 <br>
 <input id="fileinput" type="file"/>
