--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
         <th>Option</th>
     </tr>
 </table>
-<script src="/js/basicFunc.js"></script>
+<script src="js/basicFunc.js"></script>
 </body>
 </html>
